--- a/package.json
+++ b/package.json
@@ -9,13 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.21.4",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@sanity/client": "^6.1.2",
+    "@sanity/image-url": "^1.0.2",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-currency-formatter": "^1.1.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.6",
+    "react-native-animatable": "^1.3.3",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-maps": "1.3.2",
+    "react-native-progress": "^5.0.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-url-polyfill": "^1.3.0",
+    "react-native-web": "~0.18.11",
+    "react-redux": "^8.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "^0.72.1",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
